--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 <ol>
                                     <li><a href="https://web.whatsapp.com" target="_blank">Login to WhatsApp Web</a></li>
                                     <li><a href="https://www.tampermonkey.net" target="_blank">Install Tampermonkey</a></li>
-                                    <li><a href="https://raw.githubusercontent.com/laksa19/laksa19.github.io/autowa/master/autowa.user.js" target="_blank">Install Userscript</a></li>
+                                    <li><a href="https://raw.githubusercontent.com/laksa19/autowa/master/autowa.user.js" target="_blank">Install Userscript</a></li>
                                 </ol>
                             </div>
                             <div class="form-row">
