--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="sparator"></div>
                 <table>
                     <tr>
-                        <td> 
+                        <td style="min-width: 180px;"> 
                             <div>
                                 <label id="tot">Send to</label> 
                                 <textarea class="form-control textarea-control" id="bulkNoHP" rows="16" cols="15" style="text-decoration: underline;"></textarea>
