--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             </div>
                             
                         </td>
-                        <td style="width: 300px;">
+                        <td style="min-width: 300px;">
                             <label>Message Preview </label> <small onclick="edit()" style="cursor: pointer" ><i class="fa fa-edit" ></i> Edit</small>
                             
                             <textarea id="s_pesan" onclick="edit()" title="Click to edit 😄" class="form-control textarea-control col-12 bg-white" rows="16"" readonly ></textarea>
