--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="main">
             <div>
-                <label><a href="http://autowa.my.to">autowa.my.to</a></label>
+                <label><a href="http://autowa.us.to">autowa.us.to</a></label>
                 <h2 style="margin-top: 0;">Auto WhatsApp</h2>
                 <div>Tool Auto Send for WhatsApp Web </div>
                 <label><small>By Laksamadi Guko</small></label>
