--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <textarea class="form-control textarea-control" id="bulkNoHP" rows="16" cols="15" style="text-decoration: underline;"></textarea>
                             </div>
                         </td>
-                        <td style="max-width: 320px;">
+                        <td style="min-width: 320px;">
                             <div style="vertical-align: bottom;">
                                 <span>How to use?</span>
                                 <ol>
