--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
             table td{
                 padding:5px;
             }
+            table {
+                width: 800px;
+                min-width: 800px;
+                max-width: 800px;
+            }
             .main{
                 width: 800px;
             }
@@ -117,7 +122,7 @@
                                 <textarea class="form-control textarea-control" id="bulkNoHP" rows="16" cols="15" style="text-decoration: underline;"></textarea>
                             </div>
                         </td>
-                        <td style="min-width: 320px;">
+                        <td style="min-width: 320px;max-width: 320px;width: 320px;">
                             <div style="vertical-align: bottom;">
                                 <span>How to use?</span>
                                 <ol>
