--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             #picker{
                 cursor: pointer; 
                 float: right;
-                position: fixed;
+                position: absolute;
                 margin-left:2px;
                 z-index: 2;
             }
