--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
       <script type="text/javascript" src="js/jquery.emojipicker.js"></script>
 
       <!-- Emoji Data -->
-      <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.css">
-      <script type="text/javascript" src="js/jquery.emojipicker.a.js"></script>
+      <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.1.css">
+      <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.2.css">
+      <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.3.css">
+      <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.4.css">
+      <script type="text/javascript" src="js/jquery.emojipicker.a.min.js"></script>
         <link rel="icon" href="favicon.png" />
         <title>Auto WhatsApp</title>
         <style>
