--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.2.css">
       <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.3.css">
       <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.4.css">
-      <script type="text/javascript" src="js/jquery.emojipicker.a.min.js"></script>
+      <script type="text/javascript" src="js/jquery.emojipicker.a.js"></script>
         <link rel="icon" href="favicon.png" />
         <title>Auto WhatsApp</title>
         <style>
