--- a/index.html
+++ b/index.html
@@ -14,10 +14,30 @@
       <script type="text/javascript" src="js/jquery.emojipicker.js"></script>
 
       <!-- Emoji Data -->
-      <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.1.css">
-      <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.2.css">
-      <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.3.css">
-      <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.a.4.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part1.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part2.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part3.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part4.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part5.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part6.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part7.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part8.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part9.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part10.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part11.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part12.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part13.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part14.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part15.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part16.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part17.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part18.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part19.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part19.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part20.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part21.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part22.css">
+      <link rel="stylesheet" type="text/css" href="css/emoji/part23.css">
       <script type="text/javascript" src="js/jquery.emojipicker.a.min.js"></script>
         <link rel="icon" href="favicon.png" />
         <title>Auto WhatsApp</title>
