--- a/index.html
+++ b/index.html
@@ -10,35 +10,17 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.css">
-      <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
-      <script type="text/javascript" src="js/jquery.emojipicker.js"></script>
+        <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+        <script type="text/javascript" src="js/jquery.emojipicker.js"></script>
 
-      <!-- Emoji Data -->
-      <link rel="stylesheet" type="text/css" href="css/emoji/part1.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part2.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part3.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part4.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part5.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part6.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part7.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part8.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part9.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part10.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part11.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part12.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part13.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part14.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part15.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part16.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part17.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part18.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part19.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part19.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part20.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part21.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part22.css">
-      <link rel="stylesheet" type="text/css" href="css/emoji/part23.css">
-      <script type="text/javascript" src="js/jquery.emojipicker.a.min.js"></script>
+        <!-- Emoji Data -->
+        <link rel="stylesheet" id="emojistyle" type="text/css" href="">
+        <script type="text/javascript" src="js/jquery.emojipicker.a.min.js"></script>
+        <script type='text/javascript'>
+        function addEmojistyle(){
+            document.getElementById('emojistyle').href='css/jquery.emojipicker.a.css';
+        }
+        </script>
         <link rel="icon" href="favicon.png" />
         <title>Auto WhatsApp</title>
         <style>
@@ -122,7 +104,7 @@
             
         </style>
     </head>
-    <body>
+    <body onload="addEmojistyle()>
 
         <center>
 
