--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             
         </style>
     </head>
-    <body onload="addEmojistyle()>
+    <body onload="addEmojistyle()">
 
         <center>
 
