--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             </div>
             <!-- Composite End -->
         </div>
+        <img src="favicon.png" />
         </center>
     <script>
 
