--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
             <!-- Composite End -->
         </div>
-        <img src="favicon.png" />
+            <div><img src="favicon.png" /></div>
         </center>
     <script>
 
