--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
             <!-- Composite End -->
         </div>
-            <div><img src="favicon.png" /></div>
+            <div><img src="favicon.png" alt="Smiley face" height="48" width="48"></div>
         </center>
     <script>
 
