--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
             <!-- Composite End -->
         </div>
-            <div><img src="favicon.png" alt="Smiley face" height="48" width="48"></div>
+            <div><img src="favicon.png" alt="Auto WhatsApp" height="48" width="48"></div>
         </center>
     <script>
 
