--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="description" content="Tool Auto Send for WhatsApp Web.">
         <meta property="og:description" content="Tool Auto Send for WhatsApp Web.">
         <meta property="og:image" content="https://laksa19.github.io/autowa/favicon.png">
+        <meta property="og:image:alt" content="Auto WhatsApp">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/jquery.emojipicker.css">
