--- a/run.html
+++ b/run.html
@@ -31,7 +31,7 @@
                 
             }
             center{
-                margin-top:15%;
+                margin-top:13%;
             }
             div{
                 margin-top:10px;
@@ -44,6 +44,7 @@
         </style>
 	</head>
 	<body>
+		<h3>Don't close or minimize this window!</h3>
 		<center>
             <h2>Auto WhatsApp</h2>
             <div>Tool Auto Send for WhatsApp Web </div>
