--- a/run.html
+++ b/run.html
@@ -25,6 +25,7 @@
                 -ms-user-select: none;
                 user-select: none;
                 background-color: #f2f2f2;
+		text-align:center;
             }
             .main{
                 width: 400px;
