--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         
                             <div>
                                
-                                <label>Message</label>
+                                <label>Message | <a href="https://faq.whatsapp.com/en/android/26000002/" target="_blank">Formatting?</a></label>
                                 <div>
                                   <span id="picker"><i class="fa fa-smile-o"></i></span>
                                   <textarea id="pesan" class="form-control textarea-control col-12 emojiable-question" rows="5" data-emojiable="true" data-emoji-input="unicode"></textarea>
