--- a/run.html
+++ b/run.html
@@ -63,8 +63,8 @@
                 
             </div>
 		<div style="background: transparent; width: 800px;">
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                        <!-- autowa2 -->
+<!--                         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                      
                         <ins class="adsbygoogle"
                             style="display:block"
                             data-ad-client="ca-pub-1716315177239884"
@@ -73,7 +73,7 @@
                             data-full-width-responsive="true"></ins>
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
+                        </script> -->
                 </div>
 		</center>
 	<script>
