--- a/run.html
+++ b/run.html
@@ -52,7 +52,7 @@
             <label><small>By Laksamadi Guko</small></label>
             <div class="sparator"></div>
             <div class="main">
-                <div id="snh" style="display: none">Sending to <span id="nh"></span> <span id="cd" style="display: none">in</span> <span id="countD"></span></div>
+                <div id="snh" style="display: none">Sending to <span id="nh"></span> <span id="cd" style="display: none">in</span> <span id="countD">3</span></div>
                 <div id="p" style="display: none">Processing <span id="n"></span>/<span id="nx"></span> </div>
                 <div style="width: 300px; height: 3px; text-align:left; background-color:#E0E4E5">
                     <div id="prog" style="width:0%;height:3px;background-color: #02D1A4;">
