--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
                                 <span>How to use?</span>
                                 <ol>
                                     <li><a href="https://web.whatsapp.com" target="_blank">Login to WhatsApp Web</a></li>
-                                    <li><a href="https://www.tampermonkey.net" target="_blank">Install Tampermonkey</a></li>
-                                    <li><a href="https://raw.githubusercontent.com/laksa19/autowa/master/autowa.user.js" target="_blank">Install Userscript</a></li>
+<!--                                     <li><a href="https://www.tampermonkey.net" target="_blank">Install Tampermonkey</a></li> -->
+                                    <li><a href="https://raw.githubusercontent.com/laksa19/autowa/master/autowa.zip" target="_blank">Download and install Chrome extension</a></li>
+                                    <li><a href="https://www.youtube.com/watch?v=oswjtLwCUqg" target="_blank">How to install extension</a></li>
                                 </ol>
                             </div>
                             <div class="form-row">
