--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                                     <li><a href="https://web.whatsapp.com" target="_blank">Login to WhatsApp Web</a></li>
 <!--                                     <li><a href="https://www.tampermonkey.net" target="_blank">Install Tampermonkey</a></li> -->
                                     <li><a href="https://raw.githubusercontent.com/laksa19/autowa/master/autowa.zip" target="_blank">Download and install Chrome extension</a></li>
-                                    <li><a href="https://www.youtube.com/watch?v=oswjtLwCUqg" target="_blank">How to install extension</a></li>
                                 </ol>
+                                <a href="https://www.youtube.com/watch?v=oswjtLwCUqg" target="_blank">How to install extension</a>
                             </div>
                             <div class="form-row">
                                 <div class="form-group col-sm-6">
